# wild-boar-detection

./: .env  .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py  build_times
notebooks/: additional_data_collection.ipynb  dataset_collection.ipynb  get_models.ipynb  image_model_inference_test.ipynb  model_evaluation.ipynb  model_validation.ipynb  train_test_split.ipynb
python-api/: Dockerfile  main.py  requirements.txt
rust_api/: .env  Cargo.toml
rust_api/src/: main.rs
src/: model_evaluation.py  model_validation.py
src/dataset_collecion/: dataset_collection.ipynb  dataset_collection.py
src/wild_boar_detection/: __init__.py  autoencoder.py  model.py  training.py  utils.py
src/wild_boar_detection/callbacks/: threshold_finder.py
src/wild_boar_detection/dataset/: audio_dataset.py  image_dataset.py  transforms.py  utils.py
src/wild_boar_detection/losses/: psnr.py
src/wild_boar_detection/optimizers/: sam.py  yogi.py
