[project]
name = "wild-boar-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paolo Sofia", email = "paolosofia6@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests<=2.31.0",
    "notebook>=7.1.2",
    "bing-image-downloader>=1.1.2",
    "opencv-python>=4.9.0.80",
    "pandas>=2.2.1",
    "pyarrow>=15.0.2",
    "python-dotenv>=1.0.1",
    "mlflow>=2.11.1",
    "scikit-learn>=1.4.1.post1",
    "lightning>=2.2.1",
    "torch==2.2.1+cu121",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "timm>=0.9.16",
    "matplotlib>=3.8.3",
    "robyn>=0.53.1",
    "pillow-simd>=9.0.0.post1",
    "python-multipart>=0.0.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wild_boar_detection"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

