[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.0", features = ["multipart"] }
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.0"
polars = { version = "0.38.0", features = ["serde", "json"] }
tract-onnx = "0.21.0"
dotenv = "0.15.0"
image = "0.25.0"
base64 = "0.22.0"
tower-http = { version = "0.5.0", features = ["limit", "trace"] }
